<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">运动健身打卡</string>
    <string name="nav_home">首页</string>
    <string name="nav_courses">课程</string>
    <string name="nav_checkin">打卡</string>
    <string name="nav_profile">我的</string>
    <string name="splash_title">运动健身打卡</string>
    <string name="splash_subtitle">每天运动，健康生活</string>
    <string name="splash_loading">加载中…</string>
    <string name="home_title">健身推荐</string>
    <string name="home_greeting">你好，运动达人！</string>
    <string name="home_today_goal">今日目标</string>
    <string name="home_steps">今日步数</string>
    <string name="home_calories">卡路里</string>
    <string name="home_minutes">运动时长</string>
    <string name="home_recommend_title">推荐课程</string>
    <string name="courses_title">健身课程</string>
    <string name="courses_search_hint">搜索课程…</string>
    <string name="checkin_title">运动打卡</string>
    <string name="checkin_select_type">选择运动类型</string>
    <string name="checkin_duration">运动时长（分钟）</string>
    <string name="checkin_calories">消耗卡路里</string>
    <string name="checkin_note">添加备注…</string>
    <string name="checkin_submit">完成打卡</string>
    <string name="checkin_success">打卡成功！</string>
    <string name="checkin_history">打卡记录</string>
    <string name="profile_title">个人中心</string>
    <string name="profile_edit">编辑资料</string>
    <string name="profile_weight">体重</string>
    <string name="profile_height">身高</string>
    <string name="profile_goal">运动目标</string>
    <string name="profile_streak">连续打卡</string>
    <string name="profile_total_checkins">累计打卡</string>
    <string name="profile_total_minutes">累计时长</string>
    <string name="profile_settings">设置</string>
    <string name="profile_about">关于</string>
    <string name="details_title">课程详情</string>
    <string name="details_start">开始训练</string>
    <string name="details_difficulty">难度</string>
    <string name="details_duration">时长</string>
    <string name="details_calories">消耗</string>
    <string name="service_channel_name">运动计步服务</string>
    <string name="service_running">正在计步…</string>
    <string name="workout_complete">运动完成！</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="unit_kg">kg</string>
    <string name="unit_cm">cm</string>
    <string name="unit_min">分钟</string>
    <string name="unit_kcal">千卡</string>
    <string name="unit_steps">步</string>
    <string name="unit_day">天</string>
    <string name="unit_count">次</string>
</resources>